--- a/boxshrink/generate_bounding_box.ipynb
+++ b/boxshrink/generate_bounding_box.ipynb
@@ -70,7 +70,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.13 ('boxshrink')",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -84,12 +84,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "3e03cce523887ef4ae3cc71c66ab4ee9a46035781549cd05776eda36e5299632"
+    "hash": "e9eda602932413744492304798d8e81733602ce38704ab8d4a3c6b803028f8ba"
    }
   }
  },
