--- a/coreset/visualization.ipynb
+++ b/coreset/visualization.ipynb
@@ -300,7 +300,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('base': conda)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -319,7 +319,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "611d41f9c0d119f726c146a3d3bc40ce419f45abac4b6c5efabc98622bc9d855"
+    "hash": "e9eda602932413744492304798d8e81733602ce38704ab8d4a3c6b803028f8ba"
    }
   }
  },
